--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.18.1",
+    "nanoid": "^3.1.23",
     "next": "10.0.9",
+    "pg": "^8.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/pg": "^8.6.1",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
   }
