--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "10.0.9",
     "pg": "^8.6.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "twilio": "^3.66.0"
   },
   "devDependencies": {
     "@types/pg": "^8.6.1",
