--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "pullEnv": "rm -rf .env && vercel env pull",
-    "dev": "yarn pullEnv && next dev",
+    "pullEnv": "del -rf .env && vercel env pull",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
@@ -18,6 +18,7 @@
     "twilio": "^3.66.0"
   },
   "devDependencies": {
+    "@types/node": "^16.3.3",
     "@types/pg": "^8.6.1",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
